# dd-test-py

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE-3rdparty.csv  README.md  pyproject.toml  static-analysis.datadog.yml
.github/workflows/: ci.yml
ddtestopt/: git.py  platform.py  recorder.py  utils.py  writer.py
ddtestopt/ddtrace/: __init__.py  span_processor.py
ddtestopt/internal/: api_client.py  constants.py  coverage_api.py  git.py  http.py  logging.py  recorder.py  retries.py  retry_handlers.py  session_manager.py  test_data.py  utils.py  writer.py
ddtestopt/internal/coverage/: api.py  assembly.py  cache.py  code.py  context.py  coverage_lines.py  inspection.py  instrumentation.py  instrumentation_py3_11.py  instrumentation_py3_12.py  module.py  multiprocessing_coverage.py  packages.py  threading_coverage.py  utils.py
ddtestopt/internal/coverage/bytecode_injection/: __init__.py  core.py
ddtestopt/internal/ddtrace/: __init__.py  span_processor.py
ddtestopt/internal/pytest/: plugin.py
ddtestopt/pytest/: plugin.py
ddtestpy/: __init__.py  ddtrace_interface.py
ddtestpy/ddtrace_integration/: pytest_entry_point.py  tracing.py
ddtestpy/internal/: api_client.py  ci.py  constants.py  coverage_api.py  env_tags.py  git.py  http.py  logging.py  session_manager.py  test_data.py  utils.py  writer.py
ddtestpy/internal/ddtrace/: __init__.py  span_processor.py
ddtestpy/internal/pytest/: ddtrace_compat.py  plugin.py
tests/: conftest.py  fixtures.py  integration_fixtures.py  mock_setup.py  mocks.py  subprocess_mocks.py  test_basic.py  test_constants.py  test_failing.py  test_flask_app.py  test_git.py  test_hello.py  test_integration.py  test_platform.py  test_plugin.py  test_test_data.py
tests/internal/: __init__.py  test_ci.py  test_codeowners.py  test_constants.py  test_coverage_api.py  test_env_tags.py  test_git.py  test_http.py  test_logging.py  test_platform.py  test_session_manager.py  test_test_data.py  test_utils.py  test_writer.py
tests/internal/coverage/: __init__.py  test_instrumentation.py  test_util.py  test_utils.py
tests/internal/pytest/: test_itr.py  test_plugin.py  test_pytest_codeowners.py  test_pytest_ddtrace_tags.py  test_pytest_itr.py
