[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddtestopt"
dynamic = ["version"]
dependencies = [
    "bytecode>=0.15.0",
    "msgpack>=1.0.0",
]

[project.entry-points.pytest11]
ddtestopt = "ddtestopt.internal.pytest.plugin"

[tool.hatch.version]
path = "ddtestopt/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "coverage[toml]",
    "pytest-cov",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "coverage[toml]",
    "pytest-cov",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=ddtestopt --cov-report=html --cov-report=term-missing --cov-report=xml {args:tests}"
cov-report = "coverage report"
cov-html = "coverage html"

[tool.black]
line-length = 120
target_version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
lint.select = [
    "A",
    "D",
    "E",
    "F",
    "G",
    "I",
    "W",
]
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
    "D200",  # One-line docstring should fit on one line
    "E722",  # Do not use bare `except`
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
force-sort-within-sections = true
known-first-party = [ "ddtestopt" ]
relative-imports-order = "furthest-to-closest"


[tool.ruff.lint.per-file-ignores]
"ddtestopt/internal/coverage/*" = ["D"]

[tool.coverage.run]
source = ["ddtestopt"]
omit = [
    "tests/*",
    "ddtestopt/internal/coverage/third-party.tar.gz",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
