[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddtestopt"
dynamic = ["version"]
dependencies = [
    "bytecode>=0.15.0",
    "msgpack>=1.0.0",
]

[project.entry-points.pytest11]
ddtestopt = "ddtestopt.internal.pytest.plugin"

[tool.hatch.version]
path = "ddtestopt/__init__.py"

[tool.hatch.envs.test]
dependencies = [
    "slipcover",
    "pytest-socket",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11"]
pytest = ["7.2.0", "8.1.2", "8.4.*"]

[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.13"]
pytest = ["8.1.2", "8.4.*"]

[tool.hatch.envs.test.overrides]
matrix.pytest.dependencies = [
  "pytest=={matrix:pytest}"
]


[tool.hatch.envs.test.scripts]
test = "pytest -p no:ddtestopt --ignore=ddtestopt {args:tests}"
# Coverage with slipcover
test-cov = "python -m slipcover --source ddtestopt --pretty-print -m pytest -p no:ddtestopt {args:tests}"
# HTML coverage report
test-cov-html = "python -m slipcover --source ddtestopt --html --out slipcover.html -m pytest -p no:ddtestopt {args:tests}"


[tool.hatch.envs.int_test]
dependencies = [
    "pytest",
    "pytest-socket",
    "flask"
]

[[tool.hatch.envs.int_test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.int_test.env-vars]
DD_API_KEY = "foobar"

[tool.hatch.envs.int_test.scripts]
test = "pytest {args:test_fixtures}"


[tool.hatch.envs.qa]
python = "3.13"
dependencies = [
    "black",
    "ruff", 
    "mypy",
    "pytest-mypy-plugins",
    "ddtrace",
]

[tool.hatch.envs.qa.scripts]
# Combined QA check - runs all code quality tools
qa = [
    "black --check ddtestopt/ tests/",
    "ruff check ddtestopt/ tests/",
    "python -m mypy ddtestopt/ tests/",
]
fix = [
    "ruff check --fix --unsafe-fixes {args:ddtestopt/ tests/}",
    "black {args:ddtestopt/ tests/}",
    "python -m mypy ddtestopt/ tests/",
]
# Individual commands for specific fixes
lint = "ruff check {args:ddtestopt/ tests/}"
lint-fix = "ruff check --fix {args:ddtestopt/ tests/}"
format = "black {args:ddtestopt/ tests/}"
format-check = "black --check {args:ddtestopt/ tests/}"
typecheck = "python -m mypy {args:ddtestopt/}"

[tool.black]
line-length = 120
target_version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
lint.select = [
    "A",
    "D",
    "E",
    "F",
    "G",
    "I",
    "W",
]
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
    "D200",  # One-line docstring should fit on one line
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
force-sort-within-sections = true
known-first-party = [ "ddtestopt" ]
relative-imports-order = "furthest-to-closest"


[tool.ruff.lint.per-file-ignores]
"ddtestopt/internal/coverage/*" = ["D"]

[tool.coverage.run]
source = ["ddtestopt"]
omit = [
    "tests/*",
    "ddtestopt/internal/coverage/third-party.tar.gz",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["ddtestopt", "build", "dist", ".git"]
# pytest-socket configuration - allow connections to localhost only
addopts = "--allow-hosts=localhost,127.0.0.1,0.0.0.0,::1"

[tool.mypy]
python_version = "3.9"  # Target minimum supported version
# Turn it up to 11
strict = true
# Don’t hide missing types from third-party libs—fail loudly
ignore_missing_imports = false
disallow_any_unimported = true
# Extra signal / nicer output
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true
pretty = true
# Exclude problematic modules for now
exclude = [
    "build/",
    "dist/",
    "ddtestopt/internal/coverage/",  # Complex bytecode manipulation code
]
